Complete i18n translations and UI improvements - Added full translations for Obrazovni profili, Galerija, Erasmus projekti, O školi, Zaposleni, Dokumentacija pages - Fixed duplicate objects bug in translation files (erasmus, docs) - Fixed smart quotes syntax error in Serbian translations - Added employee position translations with dynamic i18n support - Corrected school founding year from 1965 to 1959 - Added data-i18n-hide for Sekcije menu item (EN/DE only) - Completed erasmus-projekti.html footer translation - Desktop navbar UI/UX improvements (active states, hover effects)

--- a/dokumentacija.html
+++ b/dokumentacija.html
@@ -28,7 +28,7 @@
                         <li><a href="dokumentacija.html"><i class="fas fa-file-alt"></i> <span data-i18n="nav.documentation">Документација</span></a></li>
                         <li><a href="strucni-timovi.html"><i class="fas fa-user-friends"></i> <span data-i18n="nav.professional_teams">Стручни тимови</span></a></li>
                         <li><a href="javne-nabavke.html"><i class="fas fa-chart-line"></i> <span data-i18n="nav.public_procurement">Јавне набавке и фин. извештаји</span></a></li>
-                        <li><a href="sekcije.html"><i class="fas fa-star"></i> <span data-i18n="nav.sections">Секције</span></a></li>
+                        <li data-i18n-hide="en,de"><a href="sekcije.html"><i class="fas fa-star"></i> <span data-i18n="nav.sections">Секције</span></a></li>
                     </ul>
                 </li>
                 <li><a href="obrazovni-profili.html" class="nav-link"><span data-i18n="nav.educational_profiles">Образовни профили</span></a></li>
@@ -84,9 +84,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">2.3 MB</span>
                         </div>
-                        <h3>Статут школе</h3>
-                        <p>Основни акт којим се уређује организација и рад школе.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.statute_title">Статут школе</h3>
+                        <p data-i18n="docs.statute_desc">Основни акт којим се уређује организација и рад школе.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
 
                     <div class="doc-card card-hover">
@@ -96,9 +96,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">1.8 MB</span>
                         </div>
-                        <h3>Правилник о раду</h3>
-                        <p>Општа правила, обавезе и надлежности запослених.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.rulebook_title">Правилник о раду</h3>
+                        <p data-i18n="docs.rulebook_desc">Општа правила, обавезе и надлежности запослених.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
 
                     <div class="doc-card card-hover">
@@ -108,9 +108,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">1.2 MB</span>
                         </div>
-                        <h3>Одлуке и записници</h3>
-                        <p>Кључне одлуке органа школе и записници са седница.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.decisions_title">Одлуке и записници</h3>
+                        <p data-i18n="docs.decisions_desc">Кључне одлуке органа школе и записници са седница.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
                 </div>
             </section>
@@ -118,8 +118,8 @@
             <!-- Планови и распореди -->
             <section class="docs-section">
                 <div class="section-header">
-                    <h2 class="section-title">Планови и распореди</h2>
-                    <p class="section-subtitle">Школски календар и распореди рада</p>
+                    <h2 class="section-title" data-i18n="docs.plans_title">Планови и распореди</h2>
+                    <p class="section-subtitle" data-i18n="docs.plans_subtitle">Школски календар и распореди рада</p>
                 </div>
 
                 <div class="doc-grid">
@@ -130,9 +130,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">3.5 MB</span>
                         </div>
-                        <h3>Годишњи план рада 2024/25</h3>
-                        <p>Кључне активности за школску 2024/25. годину.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.annual_plan_title">Годишњи план рада 2024/25</h3>
+                        <p data-i18n="docs.annual_plan_desc">Кључне активности за школску 2024/25. годину.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
 
                     <div class="doc-card card-hover">
@@ -142,9 +142,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">2.1 MB</span>
                         </div>
-                        <h3>План стручног усавршавања</h3>
-                        <p>Програми континуираног професионалног развоја.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.development_plan_title">План стручног усавршавања</h3>
+                        <p data-i18n="docs.development_plan_desc">Програми континуираног професионалног развоја.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
 
                     <div class="doc-card card-hover">
@@ -154,9 +154,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">1.9 MB</span>
                         </div>
-                        <h3>План активности за ученике</h3>
-                        <p>Секције, такмичења и ваннаставне активности.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.activities_plan_title">План активности за ученике</h3>
+                        <p data-i18n="docs.activities_plan_desc">Секције, такмичења и ваннаставне активности.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
                 </div>
             </section>
@@ -164,8 +164,8 @@
             <!-- Извештаји и признања -->
             <section class="docs-section">
                 <div class="section-header">
-                    <h2 class="section-title">Извештаји и признања</h2>
-                    <p class="section-subtitle">Годишњи извештаји и постигнућа</p>
+                    <h2 class="section-title" data-i18n="docs.reports_title">Извештаји и признања</h2>
+                    <p class="section-subtitle" data-i18n="docs.reports_subtitle">Годишњи извештаји и постигнућа</p>
                 </div>
 
                 <div class="doc-grid">
@@ -176,9 +176,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">4.2 MB</span>
                         </div>
-                        <h3>Годишњи извештај о раду 2023/24</h3>
-                        <p>Резултати, статистике и постигнућа школе.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.annual_report_title">Годишњи извештај о раду 2023/24</h3>
+                        <p data-i18n="docs.annual_report_desc">Резултати, статистике и постигнућа школе.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
 
                     <div class="doc-card card-hover">
@@ -188,9 +188,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">2.8 MB</span>
                         </div>
-                        <h3>Најуспешнији ученички радови</h3>
-                        <p>Преглед награђених радова и пројеката.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.best_works_title">Најуспешнији ученички радови</h3>
+                        <p data-i18n="docs.best_works_desc">Преглед награђених радова и пројеката.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
 
                     <div class="doc-card card-hover">
@@ -200,9 +200,9 @@
                             <span class="doc-format">PDF</span>
                             <span class="doc-size">1.5 MB</span>
                         </div>
-                        <h3>Такмичења и резултати екипа</h3>
-                        <p>Резултати са општинских, окружних и државних такмичења.</p>
-                        <a href="#" class="btn-download"><i class="fas fa-download"></i> Преузми</a>
+                        <h3 data-i18n="docs.competitions_title">Такмичења и резултати екипа</h3>
+                        <p data-i18n="docs.competitions_desc">Резултати са општинских, окружних и државних такмичења.</p>
+                        <a href="#" class="btn-download"><i class="fas fa-download"></i> <span data-i18n="docs.download">Преузми</span></a>
                     </div>
                     </div>
                 </div>
@@ -211,16 +211,16 @@
             <!-- Документи за ученике -->
             <section class="docs-section">
                 <div class="section-header">
-                    <h2 class="section-title">Документи за ученике</h2>
-                    <p class="section-subtitle">Обрасци и захтеви за ученике</p>
+                    <h2 class="section-title" data-i18n="docs.student_docs_title">Документи за ученике</h2>
+                    <p class="section-subtitle" data-i18n="docs.student_docs_subtitle">Обрасци и захтеви за ученике</p>
                 </div>
 
                 <div class="docs-list">
                     <div class="doc-list-item">
                         <div class="doc-list-icon"><i class="fas fa-file-alt"></i></div>
                         <div class="doc-list-content">
-                            <h4>Образац за оправдање изостанака</h4>
-                            <p>Попуњава родитељ/старатељ и доставља одељенском старешини.</p>
+                            <h4 data-i18n="docs.absence_form_title">Образац за оправдање изостанака</h4>
+                            <p data-i18n="docs.absence_form_desc">Попуњава родитељ/старатељ и доставља одељенском старешини.</p>
                             <span class="doc-meta-inline">PDF • 250 KB</span>
                         </div>
                         <a href="#" class="btn-icon-download" aria-label="Преузми образац за оправдање"><i class="fas fa-download"></i></a>
@@ -229,8 +229,8 @@
                     <div class="doc-list-item">
                         <div class="doc-list-icon"><i class="fas fa-clipboard-list"></i></div>
                         <div class="doc-list-content">
-                            <h4>Образац за пријаву такмичења</h4>
-                            <p>Пријава за учешће на такмичењима и смотрама.</p>
+                            <h4 data-i18n="docs.competition_form_title">Образац за пријаву такмичења</h4>
+                            <p data-i18n="docs.competition_form_desc">Пријава за учешће на такмичењима и смотрама.</p>
                             <span class="doc-meta-inline">PDF • 180 KB</span>
                         </div>
                         <a href="#" class="btn-icon-download" aria-label="Преузми образац за пријаву такмичења"><i class="fas fa-download"></i></a>
@@ -239,8 +239,8 @@
                     <div class="doc-list-item">
                         <div class="doc-list-icon"><i class="fas fa-user-graduate"></i></div>
                         <div class="doc-list-content">
-                            <h4>Молба за издавање уверења</h4>
-                            <p>Захтев за издавање различитих школских уверења.</p>
+                            <h4 data-i18n="docs.certificate_request_title">Молба за издавање уверења</h4>
+                            <p data-i18n="docs.certificate_request_desc">Захтев за издавање различитих школских уверења.</p>
                             <span class="doc-meta-inline">PDF • 320 KB</span>
                         </div>
                         <a href="#" class="btn-icon-download" aria-label="Преузми молбу за издавање уверења"><i class="fas fa-download"></i></a>
@@ -249,8 +249,8 @@
                     <div class="doc-list-item">
                         <div class="doc-list-icon"><i class="fas fa-id-card"></i></div>
                         <div class="doc-list-content">
-                            <h4>Захтев за издавање ђачке књижице</h4>
-                            <p>Поступак и потребна документа за нову ђачку књижицу.</p>
+                            <h4 data-i18n="docs.student_id_request_title">Захтев за издавање ђачке књижице</h4>
+                            <p data-i18n="docs.student_id_request_desc">Поступак и потребна документа за нову ђачку књижицу.</p>
                             <span class="doc-meta-inline">PDF • 210 KB</span>
                         </div>
                         <a href="#" class="btn-icon-download" aria-label="Преузми захтев за ђачку књижицу"><i class="fas fa-download"></i></a>
@@ -489,12 +489,12 @@
             de: null
         };
     </script>
-    <script src="translations-sr.js"></script>
-    <script src="translations-en.js"></script>
-    <script src="translations-de.js"></script>
+    <script src="translations-sr.js?t=1767815684"></script>
+    <script src="translations-en.js?t=1767815684"></script>
+    <script src="translations-de.js?t=1767815684"></script>
     
     <!-- i18n Internationalization -->
-    <script src="i18n.js"></script>
+    <script src="i18n.js?t=1767815684"></script>
     
     <!-- Савет: проверите у DevTools -> Network -> Headers да server враћа Content-Type: text/html; charset=UTF-8 -->
 </body>
