--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li role="menuitem" data-i18n-hide="en,de"><a href="dokumentacija.html"><span data-i18n="nav.documentation">Документација</span></a></li>
                         <li role="menuitem"><a href="strucni-timovi.html"><span data-i18n="nav.professional_teams">Стручни тимови</span></a></li>
                         <li role="menuitem" data-i18n-hide="en,de"><a href="javne-nabavke.html"><span data-i18n="nav.public_procurement">Јавне набавке и фин. извештаји</span></a></li>
-                        <li role="menuitem"><a href="sekcije.html"><span data-i18n="nav.sections">Секције</span></a></li>
+                        <li role="menuitem" data-i18n-hide="en,de"><a href="sekcije.html"><span data-i18n="nav.sections">Секције</span></a></li>
                     </ul>
                 </li>
                 <li role="menuitem"><a href="obrazovni-profili.html" class="nav-link"><span data-i18n="nav.educational_profiles">Образовни профили</span></a></li>
