--- a/javne-nabavke.html
+++ b/javne-nabavke.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="sr">
 <head>
     <meta charset="UTF-8">
@@ -28,7 +28,7 @@
                         <li><a href="dokumentacija.html"><i class="fas fa-file-alt"></i> <span data-i18n="nav.documentation">Документација</span></a></li>
                         <li><a href="strucni-timovi.html"><i class="fas fa-user-friends"></i> <span data-i18n="nav.professional_teams">Стручни тимови</span></a></li>
                         <li><a href="javne-nabavke.html"><i class="fas fa-chart-line"></i> <span data-i18n="nav.public_procurement">Јавне набавке и фин. извештаји</span></a></li>
-                        <li><a href="sekcije.html"><i class="fas fa-star"></i> <span data-i18n="nav.sections">Секције</span></a></li>
+                        <li data-i18n-hide="en,de"><a href="sekcije.html"><i class="fas fa-star"></i> <span data-i18n="nav.sections">Секције</span></a></li>
                     </ul>
                 </li>
                 <li><a href="obrazovni-profili.html" class="nav-link" data-i18n="nav.educational_profiles">Образовни профили</a></li>
