--- a/o-nama.html
+++ b/o-nama.html
@@ -39,7 +39,7 @@
                         <li role="menuitem" data-i18n-hide="en,de"><a href="dokumentacija.html"><span data-i18n="nav.documentation">Документација</span></a></li>
                         <li role="menuitem"><a href="strucni-timovi.html"><span data-i18n="nav.professional_teams">Стручни тимови</span></a></li>
                         <li role="menuitem" data-i18n-hide="en,de"><a href="javne-nabavke.html"><span data-i18n="nav.public_procurement">Јавне набавке и фин. извештаји</span></a></li>
-                        <li role="menuitem"><a href="sekcije.html"><span data-i18n="nav.sections">Секције</span></a></li>
+                        <li role="menuitem" data-i18n-hide="en,de"><a href="sekcije.html"><span data-i18n="nav.sections">Секције</span></a></li>
                     </ul>
                 </li>
                 <li role="menuitem"><a href="obrazovni-profili.html" class="nav-link"><span data-i18n="nav.educational_profiles">Образовни профили</span></a></li>
@@ -82,7 +82,7 @@
                         <div class="content-block">
                             <h2 class="section-title" data-i18n="about.who_we_are_title">Ко смо</h2>
                             <p class="section-text" data-i18n="about.who_we_are_text1">
-                                Медицинска школа „Стевица Јовановић“ основана је 1965. године и данас је
+                                Медицинска школа „Стевица Јовановић" основана је 1959. године и данас је
                                 савремена, акредитована средња стручна школа. Наши ђаци стичу теоријска знања
                                 и практичне вештине у сарадњи са здравственим установама у Панчеву и региону.
                             </p>
@@ -502,12 +502,12 @@
             de: null
         };
     </script>
-    <script src="translations-sr.js"></script>
-    <script src="translations-en.js"></script>
-    <script src="translations-de.js"></script>
+    <script src="translations-sr.js?t=1767809917"></script>
+    <script src="translations-en.js?t=1767809917"></script>
+    <script src="translations-de.js?t=1767809917"></script>
     
     <!-- i18n Internationalization -->
-    <script src="i18n.js"></script>
+    <script src="i18n.js?t=1767809917"></script>
     
     <!-- Савет: проверите у DevTools -> Network -> Headers да server враћа Content-Type: text/html; charset=UTF-8 -->
 </body>
