--- a/obrazovni-profili.html
+++ b/obrazovni-profili.html
@@ -27,7 +27,7 @@
                         <li><a href="dokumentacija.html"><i class="fas fa-file-alt"></i> <span data-i18n="nav.documentation">Документација</span></a></li>
                         <li><a href="strucni-timovi.html"><i class="fas fa-user-friends"></i> <span data-i18n="nav.professional_teams">Стручни тимови</span></a></li>
                         <li><a href="javne-nabavke.html"><i class="fas fa-chart-line"></i> <span data-i18n="nav.public_procurement">Јавне набавке и фин. извештаји</span></a></li>
-                        <li><a href="sekcije.html"><i class="fas fa-star"></i> <span data-i18n="nav.sections">Секције</span></a></li>
+                        <li data-i18n-hide="en,de"><a href="sekcije.html"><i class="fas fa-star"></i> <span data-i18n="nav.sections">Секције</span></a></li>
                     </ul>
                 </li>
                 <li><a href="obrazovni-profili.html" class="nav-link"><span data-i18n="nav.educational_profiles">Образовни профили</span></a></li>
@@ -281,14 +281,14 @@
                     </div>
 
                     <div class="profile-notes">
-                        <h3>Напомене:</h3>
+                        <h3><span data-i18n="education.notes_title">Напомене:</span></h3>
                         <div class="note-item">
                             <div class="note-marker">*</div>
-                            <div class="note-text">Енглески језик / Немачки језик / Руски језик / Француски језик</div>
+                            <div class="note-text" data-i18n="education.foreign_lang_note">Енглески језик / Немачки језик / Руски језик / Француски језик</div>
                         </div>
                         <div class="note-item">
                             <div class="note-marker">**</div>
-                            <div class="note-text">Грађанско васпитање / Верска настава</div>
+                            <div class="note-text" data-i18n="education.elective_note">Грађанско васпитање / Верска настава</div>
                         </div>
                     </div>
                 </div>
@@ -482,18 +482,18 @@
                     </div>
 
                     <div class="profile-notes">
-                        <h3>Напомене:</h3>
+                        <h3><span data-i18n="education.notes_title">Напомене:</span></h3>
                         <div class="note-item">
                             <div class="note-marker">*</div>
-                            <div class="note-text">Енглески језик / Немачки језик / Руски језик / Француски језик</div>
+                            <div class="note-text" data-i18n="education.foreign_lang_note">Енглески језик / Немачки језик / Руски језик / Француски језик</div>
                         </div>
                         <div class="note-item">
                             <div class="note-marker">**</div>
-                            <div class="note-text">Грађанско васпитање / Верска настава</div>
+                            <div class="note-text" data-i18n="education.elective_note">Грађанско васпитање / Верска настава</div>
                         </div>
                         <div class="note-item">
                             <div class="note-marker">***</div>
-                            <div class="note-text">Изборни предмет према програму образовног профила</div>
+                            <div class="note-text" data-i18n="education.elective_note">Изборни предмет према програму образовног профила</div>
                         </div>
                     </div>
                 </div>
